# rust-raspi-tv

./: Cargo.toml  grep
res/: playlist.m3u
src/: m3uparser.rs  main.rs  player.rs  player_view.rs
src/lib/: channel.rs  mod.rs  scraper.rs
