[package]
name = "rust-cec"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version="0.10.8", features=["blocking","json","cookies"]}
scraper = "0.12.0"
select="0.5.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json="1.0.57"
m3u = "*"
mpv="0.2.3"
